[project]
name = "hrpolicyrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.52",
    "celery>=5.6.3",
    "cloudflare>=5.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.51.0",
]
